<resources>
    <string name="app_name">Music-Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="perm_granted">Permission Granted!</string>
    <string name="perm_Disable"> Permissions Disabled </string>
    <string name="perm_Disabled"> You have disabled permission messages. Enter permissions and activate them manually. </string>
    <string name="perm_accept"> You must accept the permissions for the correct functioning of the App. </string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="opt_yes">Yes</string>
    <string name="opt_no">No</string>
    <string name="play_pause">Play-Pause</string>
    <string name="next_song">Next</string>
    <string name="prev_song">Previous</string>
    <string name="exit">Exit</string>
    <string name="songs_name">Unknown Song</string>
    <string name="songs_album">Unknown Album</string>
    <string name="file_name">File Name</string>
    <string name="shuffle">Shuffle</string>
    <string name="playlist">Playlist</string>
    <string name="favourites">Favourites</string>
    <string name="total_song">Total Songs:</string>
    <string name="back">Return</string>
    <string name="like">Liked Song</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading…</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="setting">Settings</string>
    <string name="library">Library</string>
    <string name="folder">Folders</string>
    <string name="play_queue">Play Queue</string>
    <string name="scan">Scan Media</string>
    <string name="about">About</string>
    <string name="now_playing">Now Playing</string>
    <string name="notification_desc">This is  a  important channel for showing song!!</string>
</resources>